<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">FireBird Studios</string>
    <string name="home">Home</string>
    <string name="about_us">About us</string>
    <string name="book_a_room">Book a Room</string>
    <string name="contact_us">Contact us</string>
    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>
    <string name="Confirm_Button">Confirm</string>
    <string name="Cancel_Button">Cancel</string>
    <string name="pick_a_date">Pick a Date</string>
    <string name="pick_a_time">Pick a start time</string>
    <string name="phoneNumber">Press here to call us</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="pricing">Pricing</string>
    <string-array name="AboutUsTabs">
        <item>Owners</item>
        <item>Studio</item>
        <item>Gallery</item>
    </string-array>
    <string name="title_activity_activity_login">ActivityLogin</string>
    <string name="Login">Login</string>

    <string name="hello_world">Hello world!</string>
    <string name="sign_out">Sign out</string>
    <string name="skip_login">Skip Login</string>
    <string name="Charlie">Hello my name is Charlie, </string>
    <string name="Naomi">hello my name is Naomi</string>
    <string name="Disconnect_from_app">Disconnect from app</string>
    <string name="maps_button">Find us on a map</string>
    <string name="room_hire_rate">Room Hire Rates</string>
    <string name="weekday">Weekday</string>
    <string name="weekend">Weekend</string>
    <string name="evening_room_hire">Room Hire(7pm–11pm):£31/£25</string>
    <string name="sunday_evening_hire">Sunday Evening Hire:£31/£25</string>

    <string name="charlie">Charlie Evans</string>
    <string name="naomi">Naomi Evans</string>
    <string name="daytime_room_hire">Daytime Room Hire(per hour) £7</string>
    <string name="weekday_daytime_rate">Daytime Room Hire (per hour) £5/£4.50</string>
    <string name="eight_hr_booking">8 hr booking (10am – 6pm)\t£40</string>
    <string name="lockout_weekday">Lockout (10am – 11pm)\t£60</string>
    <string name="eight_hour_booking_sunday">8 hr Booking\t£50</string>
    <string name="lockout_sunday">Lockout\t£68</string>
    <string name="bass_amp">Bass Amp</string>
    <string name="bass_amp_price">£3</string>
    <string name="standard_guitar_amp">Guitar Amp Standard (Peavey Classic 30/Marshall AVT50)</string>
    <string name="premium_guitar_amp">Guitar Amp Premium (Marshall JCM2000/Blackstar HT Stage 100)</string>
    <string name="premium_amp_price">£5</string>
    <string name="weekdays">Monday-Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="snare">Snare</string>
    <string name="cymbals">Cymbals</string>
    <string name="drum_kit">Drum Kit (Shells, stands and pedal)</string>
    <string name="facebook_link">Find us on Facebook</string>
    <string name="twitter_link">Find us on Twitter</string>
    <string name="opening_hours">Opening Hours</string>
    <string name="equipment_for_hire">Equipment for hire</string>
    <string-array name="Locales">
        <item>English</item>
        <item>中文(简体)</item>
    </string-array>
    <string-array name="equipment_hire">
        <item>Bass Amp</item>
        <item>Standard Guitar Amp</item>
        <item>Premium Guitar Amp</item>
        <item>Drum Kit</item>
        <item>Cymbals</item>
        <item>Snare</item>
    </string-array>
    <string-array name="pricingTabs">
        <item>Room Hire</item>
        <item>Equipment Hire</item>
      </string-array>
    <string name="not_connected">Please check your internet connection</string>
    <string name="enter_number">please enter a valid number</string>
    <string name="enter_email">please enter a valid email address</string>
    <string name="enter_name">Please enter your name</string>
    <string name="logo_description">Firebird Studios Logo</string>
    <string name="equipment">Equipment</string>
    <string name="price">Price</string>
    <string name="end_time">Pick an end time</string>
    <string name="saturday_time">10am - 6pm</string>
    <string name="weekday_time">10am - 11pm</string>
    <string name="sunday_time">10am-10pm</string>
    <string name="address">Address</string>
    <string name="studio_address">Unit 4 \n 21– 23 Emery Road \n Bristol \n BS4 5PF \n United Kingdom</string>
    <string name="email_us">Email Us</string>
    <string name="email_client">Choose email client</string>
    <string name="check_time">please enter a time</string>
    <string name="check_date">please enter a date</string>
</resources>
