<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:padding="5dp"
        android:text="@string/opening_hours"
        android:textSize="24sp" />

    <TableRow

        android:layout_width="match_parent"

        android:layout_height="wrap_content"
        android:padding="5dp">

        <TextView

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/weekday"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/weekend"
            android:textStyle="bold" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/weekdays" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/weekday_time" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp">

        <TextView
            android:layout_weight="1"
            android:text="@string/saturday" />

        <TextView
            android:layout_weight="1"
            android:text="@string/saturday_time" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp">

        <TextView
            android:layout_weight="1"
            android:text="@string/sunday" />

        <TextView
            android:layout_weight="1"
            android:text="@string/sunday_time" />
    </TableRow>

    <TableRow

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp">

        <TextView

            android:text="@string/address"
            android:textStyle="bold" />
    </TableRow>

    <TableRow android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView android:text="@string/studio_address" />

    </TableRow>
</LinearLayout>