<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">

    <TableRow>

        <TextView
            android:textStyle="bold"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"

            android:padding="5dp"
            android:text="@string/equipment" />

        <TextView
            android:textStyle="bold"
            android:layout_weight="1"
            android:padding="5dp"
            android:text="@string/price" />
    </TableRow>

    <TableRow
        android:background="@drawable/tableborder">

        <TextView
            android:id="@+id/bass_amp"
            android:layout_weight="1"
            android:background="@drawable/tableborder"
            android:padding="5dp"
            android:text="@string/bass_amp" />

        <TextView

            android:layout_weight="1"
            android:padding="5dp"
            android:text="@string/bass_amp_price" />
    </TableRow>

    <TableRow
        android:background="@drawable/tableborder">

        <TextView
            android:background="@drawable/tableborder"
            android:id="@+id/guitar_amp_standard"
            android:layout_width="40dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:padding="5dp"
            android:text="@string/standard_guitar_amp" />

        <TextView
            android:layout_weight="1"
            android:padding="5dp"
            android:text="@string/bass_amp_price" />
    </TableRow>

    <TableRow
        android:background="@drawable/tableborder">

        <TextView
            android:background="@drawable/tableborder"
            android:id="@+id/guitar_amp_premium"
            android:layout_width="40dp"
            android:layout_weight="1"
            android:padding="5dp"
            android:text="@string/premium_guitar_amp" />

        <TextView

            android:layout_weight="1"
            android:padding="5dp"
            android:text="@string/premium_amp_price" />
    </TableRow>

    <TableRow
        android:background="@drawable/tableborder">

        <TextView
            android:background="@drawable/tableborder"
            android:id="@+id/drum_kit"
            android:layout_width="40dp"
            android:layout_weight="1"
            android:padding="5dp"
            android:text="@string/drum_kit" />

        <TextView
            android:layout_weight="1"
            android:padding="5dp"
            android:text="@string/premium_amp_price" />
    </TableRow>

    <TableRow
        android:background="@drawable/tableborder">

        <TextView
            android:background="@drawable/tableborder"
            android:id="@+id/cymbals"
            android:layout_weight="1"
            android:padding="5dp"
            android:text="@string/cymbals" />

        <TextView
            android:layout_weight="1"
            android:padding="5dp"
            android:text="£2" />
    </TableRow>

    <TableRow
        android:background="@drawable/tableborder">

        <TextView
            android:background="@drawable/tableborder"
            android:id="@+id/snare"
            android:layout_weight="1"
            android:padding="5dp"
            android:text="@string/snare" />

        <TextView
            android:layout_weight="1"
            android:padding="5dp"
            android:text="@string/bass_amp_price" />
    </TableRow>
</TableLayout>