<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="fragmentContactUs">

    <TextView
        android:id="@+id/phoneNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:padding="10dp"
        android:text="@string/phoneNumber" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/maps_button"
        android:id="@+id/maps"/>
    <Button
        android:id="@+id/facebook_link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/facebook_link"/>
    <Button
        android:id="@+id/twitter_link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/twitter_link"/>
</LinearLayout>